lang.java.statics.test/tests/positive/packages/classes-visible-in-compilation-units-of-same-toplevel-package.yes.javtest
STATIX ok
JAVAC  ok

[p] {

    [A]
    package p;
    public class A {
        public B b;
    }

    [B]
    package p;
    public class B {
        public A a;
    }

}
