lang.java.statics.test/tests/negative/packages/class-in-unnamed-package-invisible-in-compilation-units-of-toplevel-package.no.javtest
STATIX fail java\.names\.lexical-type-name.*\"A\"
JAVAC  fail cannot find symbol

[A]
public class A {
}

[p] {

    [B]
    package p;
    public class B {
        public A a;
    }

}
